--- a/aboutus.html
+++ b/aboutus.html
@@ -34,7 +34,6 @@
 								<span></span>
 								<span></span>
 								<span></span>
-								
 							</div>
 						</a>
 					</div>
@@ -113,16 +112,25 @@
 			<div class="container relative">
 				<div class="grid md:grid-cols-3 grid-cols-1 items-center gap-6">
 					<div class="vis-mis-block text-center py-12">
-						<h2 class="text-2xl font-semibold mb-2">Vision</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in congue velit, quis malesuada sem.</p>
+						<div class="size-16 h-28 min-w-16 text-primary flex items-center justify-center mx-auto -rotate-45 bg-white rounded-full">
+							<i class="ri-focus-2-line text-3xl rotate-45"></i>
+						</div>
+						<h2 class="text-2xl font-semibold mb-2">Our Mission</h2>
+						<p>We aim to empower businesses by delivering creative, reliable, and scalable digital solutions that drive growth and innovation.</p>
 					</div>	
 					<div class="vis-mis-block text-center py-12">
-						<h2 class="text-2xl font-semibold mb-2">Mission</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in congue velit, quis malesuada sem.</p>
+						<div class="size-16 h-28 min-w-16 text-primary flex items-center justify-center mx-auto -rotate-45 bg-white rounded-full">
+							<i class="ri-group-line text-3xl rotate-45"></i>
+						</div>
+						<h2 class="text-2xl font-semibold mb-2">Our Values</h2>
+						<p>We believe in creativity, transparency, and excellence, ensuring every project reflects quality, trust, and long-term impact.</p>
 					</div>
 					<div class="vis-mis-block text-center py-12">
-						<h2 class="text-2xl font-semibold mb-2"	>Mission</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in congue velit, quis malesuada sem.</p>
+						<div class="size-16 h-28 min-w-16 text-primary flex items-center justify-center mx-auto -rotate-45 bg-white rounded-full">
+							<i class="ri-award-fill text-3xl rotate-45"></i>
+						</div>
+						<h2 class="text-2xl font-semibold mb-2"	>Our Approach</h2>
+						<p>We combine design thinking, modern technologies, and client collaboration to build solutions that are functional and future-ready.</p>
 					</div>
 				</div>
 			</div>
@@ -205,6 +213,58 @@
 								<a href="" class="text-sm font-medium hover:text-primary dark:hover:text-primary dark:text-white duration-500">Read More <i class="ri-arrow-right-line"></i></a>
 							</div>
 						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="relative py-32">
+			<div class="container relative">
+				<div class="grid grid-cols-1 pb-6 text-center">
+					<h4 class="mb-4 md:leading-normal text-[26px] leading-normal font-semibold">core Values</h4>
+					<p class="text-slate-400 max-w-xl mx-auto">At D2k – Design2kode, we value creativity, quality, and integrity. We focus on delivering user-friendly, scalable, and reliable web solutions that help businesses grow and succeed.</p>
+				</div>
+				<div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 mt-6 gap-6">
+					<div class="vis-mis-block text-center py-12">
+						<div class="size-16 h-28 min-w-16 text-primary flex items-center justify-center mx-auto -rotate-45 bg-white rounded-full">
+							<i class="ri-focus-2-line text-3xl rotate-45"></i>
+						</div>
+						<h2 class="text-2xl font-semibold mb-2">Excellence</h2>
+						<p>Excellence – We strive for the highest standards in every project we deliver.</p>
+					</div>
+					<div class="vis-mis-block text-center py-12">
+						<div class="size-16 h-28 min-w-16 text-primary flex items-center justify-center mx-auto -rotate-45 bg-white rounded-full">
+							<i class="ri-focus-2-line text-3xl rotate-45"></i>
+						</div>
+						<h2 class="text-2xl font-semibold mb-2">Collaboration</h2>
+						<p>We work closely with clients to achieve shared goals together.</p>
+					</div>
+					<div class="vis-mis-block text-center py-12">
+						<div class="size-16 h-28 min-w-16 text-primary flex items-center justify-center mx-auto -rotate-45 bg-white rounded-full">
+							<i class="ri-lightbulb-flash-line text-3xl rotate-45"></i>
+						</div>
+						<h2 class="text-2xl font-semibold mb-2">Innovation</h2>
+						<p>We embrace new ideas and technologies to create better solutions.</p>
+					</div>
+					<div class="vis-mis-block text-center py-12">
+						<div class="size-16 h-28 min-w-16 text-primary flex items-center justify-center mx-auto -rotate-45 bg-white rounded-full">
+							<i class="ri-heart-2-line text-3xl rotate-45"></i>
+						</div>
+						<h2 class="text-2xl font-semibold mb-2">Integrity</h2>
+						<p>We act with honesty, transparency, and respect in all we do.</p>
+					</div>
+					<div class="vis-mis-block text-center py-12">
+						<div class="size-16 h-28 min-w-16 text-primary flex items-center justify-center mx-auto -rotate-45 bg-white rounded-full">
+							<i class="ri-shuffle-fill text-3xl rotate-45"></i>
+						</div>
+						<h2 class="text-2xl font-semibold mb-2">Agility</h2>
+						<p>We adapt quickly to change and deliver flexible, effective solutions.</p>
+					</div>
+					<div class="vis-mis-block text-center py-12">
+						<div class="size-16 h-28 min-w-16 text-primary flex items-center justify-center mx-auto -rotate-45 bg-white rounded-full">
+							<i class="ri-bookmark-line text-3xl rotate-45"></i>
+						</div>
+						<h2 class="text-2xl font-semibold mb-2">Quality</h2>
+						<p>We ensure every solution is reliable, user-friendly, and built to last.</p>
 					</div>
 				</div>
 			</div>
