--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 										<span class="size-12 inline-flex items-center justify-center tracking-wider align-middle duration-500 text-base text-center bg-primary/10 text-primary rounded-full me-3"><i class="ri-mail-line text-2xl"></i></span>
 										<div class="content">
 											<h6 class="text-base font-medium">Have any questions?</h6>
-											<a href="mailto:contact@ovan.com" class="text-primary">contact@ovan.com</a> 
+											<a href="mailto:contact@design2kode.co.uk" class="text-primary">contact@design2kode.co.uk</a> 
 										</div>
 									</div>
 								</div>
