--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="assets/libs/tobii/css/tobii.min.css">
 		<link rel="stylesheet" href="assets/libs/remixicon/fonts/remixicon.css">
 		<link rel="stylesheet" href="assets/css/tailwind.min.css">
-		
+		<link rel="stylesheet" href="assets/css/styles.css">
 	</head>
     <body class="text-slate-900 dark:text-white dark:bg-slate-900">
         <nav id="topnav" class="defaultscroll is-sticky">
@@ -174,6 +174,117 @@
                     </div>
                 </div>
             </div>
+		</section>
+		<section class="relative dev-process pb-16">
+			<div class="container relative">
+				<div class="grid grid-cols-1 pb-6 text-center">
+					<h4 class="mb-4 md:leading-normal text-[26px] leading-normal font-semibold">Our Development Process</h4>
+					<p class="text-slate-400 max-w-xl mx-auto">We follow a clear, structured process from planning to support, ensuring every project is delivered with quality, precision, and care.</p>
+				</div>
+				<div class="mt-6 gap-6">
+					<div class="vis-mis-block text-center py-12 flex justify-start items-center mb-5">
+						<div class="size-16 min-w-16 text-primary flex items-center justify-center bg-white rounded-full me-6">01</div>
+						<div>
+							<h2 class="text-2xl text-start font-semibold mb-1">Discovery &amp; Planning</h2>
+							<p>We analyze your goals, gather requirements, and plan a clear roadmap for project success.</p>
+						</div>
+					</div>
+					<div class="vis-mis-block text-center py-12 flex justify-start items-center mb-5">
+						<div class="size-16 min-w-16 text-primary flex items-center justify-center bg-white rounded-full me-6">02</div>
+						<div>
+							<h2 class="text-2xl text-start font-semibold mb-1">Design &amp; Architecture</h2>
+							<p>We create user-friendly designs and scalable architectures tailored to your business needs.</p>
+						</div>
+					</div>
+					<div class="vis-mis-block text-center py-12 flex justify-start items-center mb-5">
+						<div class="size-16 min-w-16 text-primary flex items-center justify-center bg-white rounded-full me-6">03</div>
+						<div>
+							<h2 class="text-2xl text-start font-semibold mb-1">Development &amp; Testing</h2>
+							<p>We build with clean code and test carefully to ensure functionality, performance, and security.</p>
+						</div>
+					</div>
+					<div class="vis-mis-block text-center py-12 flex justify-start items-center mb-5">
+						<div class="size-16 min-w-16 text-primary flex items-center justify-center bg-white rounded-full me-6">04</div>
+						<div>
+							<h2 class="text-2xl text-start font-semibold mb-1">Deployment &amp; Launch</h2>
+							<p>We deploy your website smoothly, making it live with complete stability and reliability.</p>
+						</div>
+					</div>
+					<div class="vis-mis-block text-center py-12 flex justify-start items-center mb-5">
+						<div class="size-16 min-w-16 text-primary flex items-center justify-center bg-white rounded-full me-6">05</div>
+						<div>
+							<h2 class="text-2xl text-start font-semibold mb-1">Support &amp; Maintenance</h2>
+							<p>We provide ongoing updates, fixes, and improvements to keep your website running strong.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+        </section>
+		<section class="lg:py-16 py-16 bg-slate-50">
+			<div class="container relative">
+				<div class="grid grid-cols-1 pb-6 text-center">
+					<h4 class="mb-4 md:leading-normal text-[26px] leading-normal font-semibold">Industries We Serve</h4>
+					<p class="text-slate-400 max-w-xl mx-auto">We deliver tailored web solutions across multiple industries, helping businesses innovate, grow, and connect with their audiences effectively.</p>
+				</div>
+				<div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 mt-6 gap-6">
+					<div class="group bg-white rounded-2xl p-6">
+						<div class="size-16 min-w-16 bg-primary/5 text-primary rounded-full flex justify-center items-center mx-auto mb-3">
+							<i class="ri-tools-line text-3xl rotate-45"></i>
+						</div>
+						<div class="content">
+							<span class="text-lg hover:text-primary dark:text-white dark:hover:text-primary duration-500 ease-in-out font-semibold text-center block">Technology</span>
+							<p class="text-slate-400 mt-3">We build scalable digital platforms that empower tech businesses to innovate and stay ahead in a competitive market.</p>
+						</div>
+					</div>
+					<div class="group bg-white rounded-2xl p-6">
+						<div class="size-16 min-w-16 bg-primary/5 text-primary rounded-full flex justify-center items-center mx-auto mb-3">
+							<i class="ri-tools-line text-3xl rotate-45"></i>
+						</div>
+						<div class="content">
+							<span class="text-lg hover:text-primary dark:text-white dark:hover:text-primary duration-500 ease-in-out font-semibold text-center block">Health Care</span>
+							<p class="text-slate-400 mt-3">We design secure, user-friendly solutions that help healthcare providers connect, manage data, and improve patient experiences.</p>
+						</div>
+					</div>
+					<div class="group bg-white rounded-2xl p-6">
+						<div class="size-16 min-w-16 bg-primary/5 text-primary rounded-full flex justify-center items-center mx-auto mb-3">
+							<i class="ri-tools-line text-3xl rotate-45"></i>
+						</div>
+						<div class="content">
+							<span class="text-lg hover:text-primary dark:text-white dark:hover:text-primary duration-500 ease-in-out font-semibold text-center block">Finance</span>
+							<p class="text-slate-400 mt-3">We create reliable, compliant platforms that enable financial businesses to deliver secure and seamless digital services.</p>
+						</div>
+					</div>
+					<div class="group bg-white rounded-2xl p-6">
+						<div class="size-16 min-w-16 bg-primary/5 text-primary rounded-full flex justify-center items-center mx-auto mb-3">
+							<i class="ri-tools-line text-3xl rotate-45"></i>
+						</div>
+						<div class="content">
+							<span class="text-lg hover:text-primary dark:text-white dark:hover:text-primary duration-500 ease-in-out font-semibold text-center block">E-Commerce</span>
+							<p class="text-slate-400 mt-3">We develop engaging, high-performance online stores that help brands boost sales and deliver better shopping experiences.</p>
+						</div>
+					</div>
+					<div class="group bg-white rounded-2xl p-6">
+						<div class="size-16 min-w-16 bg-primary/5 text-primary rounded-full flex justify-center items-center mx-auto mb-3">
+							<i class="ri-tools-line text-3xl rotate-45"></i>
+						</div>
+						<div class="content">
+							<span class="text-lg hover:text-primary dark:text-white dark:hover:text-primary duration-500 ease-in-out font-semibold text-center block">Manufacturing</span>
+							<p class="text-slate-400 mt-3">We provide digital tools and platforms that improve processes, optimize efficiency, and support growth in manufacturing.</p>
+						</div>
+					</div>
+					<div class="group bg-white rounded-2xl p-6">
+						<div class="size-16 min-w-16 bg-primary/5 text-primary rounded-full flex justify-center items-center mx-auto mb-3">
+							<i class="ri-tools-line text-3xl rotate-45"></i>
+						</div>
+						<div class="content">
+							<span class="text-lg hover:text-primary dark:text-white dark:hover:text-primary duration-500 ease-in-out font-semibold text-center block">Education</span>
+							<p class="text-slate-400 mt-3">We design interactive, accessible solutions that support learning, knowledge sharing, and collaboration in the education sector.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="relative lg:py-24 py-16">
             <div class="container relative md:mt-24 mt-16">
                 <div class="grid md:grid-cols-12 grid-cols-1 items-center gap-6">
                     <div class="lg:col-span-6 md:col-span-5">
@@ -281,7 +392,7 @@
                     </div>
                     <div class="counter-box text-center">
                         <h1 class="lg:text-5xl text-4xl font-semibold mb-2 text-white"><span class="counter-value" data-target="7">0</span>+</h1>
-                        <h5 class="text-sm uppercase font-semibold text-white/70">Years of Experience</h5>
+                       <h5 class="text-sm uppercase font-semibold text-white/70">Years of Experience</h5>
                     </div>
                     <div class="counter-box text-center">
                         <h1 class="lg:text-5xl text-4xl font-semibold mb-2 text-white"><span class="counter-value" data-target="90">0</span>%</h1>
@@ -368,7 +479,7 @@
 										<span class="size-12 inline-flex items-center justify-center tracking-wider align-middle duration-500 text-base text-center bg-primary/10 text-primary rounded-full me-3"><i class="ri-mail-line text-2xl"></i></span>
 										<div class="content">
 											<h6 class="text-base font-medium">Have any questions?</h6>
-											<a href="mailto:contact@ovan.com" class="text-primary">contact@ovan.com</a> 
+											<a href="mailto:contact@design2kode.co.uk" class="text-primary">contact@design2kode.co.uk</a> 
 										</div>
 									</div>
 								</div>
