--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 							<div class="grid md:grid-cols-12 grid-cols-1 gap-6">
 								<div class="lg:col-span-4 md:col-span-12">
 									<a href="#" class="text-[22px] focus:outline-none">
-										<img src="assets/images/logo-light.png" alt="">
+										<img src="assets/images/logo-light.png" width="125" alt="">
 									</a>
 									<p class="mt-6 text-gray-300">Our design projects are fresh and simple and will benefit your business greatly. Learn more about our work!</p>
 									<form class="mt-4 max-w-72">
