--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 					<p class="text-slate-400 max-w-xl mx-auto">Each project is crafted with a deep understanding of your goals, ensuring scalable and user-friendly solutions that align with your brand and drive long-term value.</p>
 				</div>
 				<div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 mt-6 gap-6">
-					<div class="group relative overflow-hidden flex p-6 bg-white dark:bg-slate-900 hover:shadow-sm shadow-slate-100 dark:shadow-slate-800 duration-500 rounded-2xl">
+					<div class="group service-block relative overflow-hidden flex p-6 bg-white dark:bg-slate-900 hover:shadow-sm shadow-slate-100 dark:shadow-slate-800 duration-500 rounded-2xl">
 						<div class="absolute inset-0 opacity-0 group-hover:opacity-100 duration-500 bg-[url('../../assets/images/blogs/1.jpg')] bg-top bg-no-repeat bg-cover"></div>
 						<div class="absolute inset-0 opacity-0 group-hover:opacity-100 duration-500 bg-slate-900/70"></div>
 						<div class="size-16 h-28 min-w-16 bg-primary/5 group-hover:bg-white/20 rounded-full flex align-middle justify-center items-center shadow-sm mx-auto -rotate-45 group-hover:rotate-0 duration-500">
@@ -152,7 +152,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="group relative overflow-hidden flex p-6 bg-white dark:bg-slate-900 hover:shadow-sm shadow-slate-100 dark:shadow-slate-800 duration-500 rounded-2xl">
+					<div class="group service-block relative overflow-hidden flex p-6 bg-white dark:bg-slate-900 hover:shadow-sm shadow-slate-100 dark:shadow-slate-800 duration-500 rounded-2xl">
 						<div class="absolute inset-0 opacity-0 group-hover:opacity-100 duration-500 bg-[url('../../assets/images/blogs/2.jpg')] bg-top bg-no-repeat bg-cover"></div>
 						<div class="absolute inset-0 opacity-0 group-hover:opacity-100 duration-500 bg-slate-900/70"></div>
 						<div class="size-16 h-28 min-w-16 bg-primary/5 group-hover:bg-white/20 rounded-full flex align-middle justify-center items-center shadow-sm mx-auto -rotate-45 group-hover:rotate-0 duration-500">
@@ -166,7 +166,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="group relative overflow-hidden flex p-6 bg-white dark:bg-slate-900 hover:shadow-sm shadow-slate-100 dark:shadow-slate-800 duration-500 rounded-2xl">
+					<div class="group service-block relative overflow-hidden flex p-6 bg-white dark:bg-slate-900 hover:shadow-sm shadow-slate-100 dark:shadow-slate-800 duration-500 rounded-2xl">
 						<div class="absolute inset-0 opacity-0 group-hover:opacity-100 duration-500 bg-[url('../../assets/images/blogs/3.jpg')] bg-top bg-no-repeat bg-cover"></div>
 						<div class="absolute inset-0 opacity-0 group-hover:opacity-100 duration-500 bg-slate-900/70"></div>
 						<div class="size-16 h-28 min-w-16 bg-primary/5 group-hover:bg-white/20 rounded-full flex align-middle justify-center items-center shadow-sm mx-auto -rotate-45 group-hover:rotate-0 duration-500">
@@ -180,7 +180,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="group relative overflow-hidden flex p-6 bg-white dark:bg-slate-900 hover:shadow-sm shadow-slate-100 dark:shadow-slate-800 duration-500 rounded-2xl">
+					<div class="group service-block relative overflow-hidden flex p-6 bg-white dark:bg-slate-900 hover:shadow-sm shadow-slate-100 dark:shadow-slate-800 duration-500 rounded-2xl">
 						<div class="absolute inset-0 opacity-0 group-hover:opacity-100 duration-500 bg-[url('../../assets/images/blogs/4.jpg')] bg-top bg-no-repeat bg-cover"></div>
 						<div class="absolute inset-0 opacity-0 group-hover:opacity-100 duration-500 bg-slate-900/70"></div>
 						<div class="size-16 h-28 min-w-16 bg-primary/5 group-hover:bg-white/20 rounded-full flex align-middle justify-center items-center shadow-sm mx-auto -rotate-45 group-hover:rotate-0 duration-500">
@@ -194,7 +194,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="group relative overflow-hidden flex p-6 bg-white dark:bg-slate-900 hover:shadow-sm shadow-slate-100 dark:shadow-slate-800 duration-500 rounded-2xl">
+					<div class="group service-block relative overflow-hidden flex p-6 bg-white dark:bg-slate-900 hover:shadow-sm shadow-slate-100 dark:shadow-slate-800 duration-500 rounded-2xl">
 						<div class="absolute inset-0 opacity-0 group-hover:opacity-100 duration-500 bg-[url('../../assets/images/blogs/5.jpg')] bg-top bg-no-repeat bg-cover"></div>
 						<div class="absolute inset-0 opacity-0 group-hover:opacity-100 duration-500 bg-slate-900/70"></div>
 						<div class="size-16 h-28 min-w-16 bg-primary/5 group-hover:bg-white/20 rounded-full flex align-middle justify-center items-center shadow-sm mx-auto -rotate-45 group-hover:rotate-0 duration-500">
@@ -208,7 +208,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="group relative overflow-hidden flex p-6 bg-white dark:bg-slate-900 hover:shadow-sm shadow-slate-100 dark:shadow-slate-800 duration-500 rounded-2xl">
+					<div class="group service-block relative overflow-hidden flex p-6 bg-white dark:bg-slate-900 hover:shadow-sm shadow-slate-100 dark:shadow-slate-800 duration-500 rounded-2xl">
 						<div class="absolute inset-0 opacity-0 group-hover:opacity-100 duration-500 bg-[url('../../assets/images/blogs/6.jpg')] bg-top bg-no-repeat bg-cover"></div>
 						<div class="absolute inset-0 opacity-0 group-hover:opacity-100 duration-500 bg-slate-900/70"></div>
 						<div class="size-16 h-28 min-w-16 bg-primary/5 group-hover:bg-white/20 rounded-full flex align-middle justify-center items-center shadow-sm mx-auto -rotate-45 group-hover:rotate-0 duration-500">
@@ -233,8 +233,8 @@
 		<section class="relative md:pb-24 pb-16 bg-[url('../../assets/images/bg/3.jpg')] bg-fixed bg-center bg-no-repeat bg-cover">
 			<div class="w-full h-full absolute left-0 top-0 right-0 bottom-0 bg-slate-900/75">&nbsp;</div>
 			<div class="container relative">
-				<div class="grid grid-cols-12">
-					<div class="md:col-span-4 col-span-12">
+				<div class="grid grid-cols-12 home-stat-grid">
+					<div class="md:col-span-4 home-stat-col">
 						<div class="bg-primary/60 p-6">
 							<div class="relative grid md:grid-cols-1 grid-cols-1 items-center gap-6 my-6">
 								<div class="text-center">
@@ -252,7 +252,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="md:col-span-8 col-span-12">
+					<div class="md:col-span-8 home-stat-col">
 						<div class="container relative lg:mt-24 mt-16">
 							<div class="grid grid-cols-1 text-center">
 								<h4 class="mb-4 md:leading-normal text-[26px] text-white leading-normal font-semibold">Driving Business Transformation Through Proven Expertise</h4>
@@ -442,86 +442,34 @@
 		</section>
 		<footer class="relative bg-slate-900 dark:bg-slate-800">
 			<div class="container relative">
-				<div class="grid grid-cols-1">
-					<div class="relative py-16">
-						<div class="relative w-full">
-							<div class="grid md:grid-cols-12 grid-cols-1 gap-6">
-								<div class="lg:col-span-4 md:col-span-12">
-									<a href="#" class="text-[22px] focus:outline-none">
-										<img src="assets/images/logo-light.png" width="125" alt="">
-									</a>
-									<p class="mt-6 text-gray-300">Our design projects are fresh and simple and will benefit your business greatly. Learn more about our work!</p>
-									<form class="mt-4 max-w-72">
-										<div class="relative">
-											<div class="form-icon relative">
-												<i class="ri-mail-line absolute top-2 start-4 text-gray-300"></i>
-												<input type="email" class="form-input px-10 py-2 h-10 rounded-md w-full bg-transparent border border-slate-800 dark:border-slate-700 text-gray-100 focus:shadow-none focus:ring-0 placeholder:text-gray-400 outline-none" placeholder="Email" name="email" required="">
-											</div>
-											<button type="submit" id="submitsubscribe" name="send" class="size-9 inline-flex items-center justify-center rounded-md bg-primary/10 text-primary hover:bg-primary hover:text-white duration-500 absolute top-0.5 end-0.5"><i class="ri-mail-line"></i></button>
-										</div>
-									</form>
-								</div>
-								<div class="lg:col-span-3 md:col-span-3">
-									<h5 class="tracking-[1px] text-gray-100 font-semibold text-lg">Services</h5>
-									<ul class="list-none footer-list mt-6">
-										<li><i class="ri-arrow-right-s-line text-gray-400 me-1"></i><a href="services.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out">Installation</a></li>
-										<li class="mt-[10px]"><i class="ri-arrow-right-s-line text-gray-400 me-1"></i><a href="services.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out">Maintenance</a></li>
-										<li class="mt-[10px]"><i class="ri-arrow-right-s-line text-gray-400 me-1"></i><a href="services.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out">System Design</a></li>
-										<li class="mt-[10px]"><i class="ri-arrow-right-s-line text-gray-400 me-1"></i><a href="services.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out">Energy Consulting</a></li>
-										<li class="mt-[10px]"><i class="ri-arrow-right-s-line text-gray-400 me-1"></i><a href="services.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out">Financing</a></li>
-										<li class="mt-[10px]"><i class="ri-arrow-right-s-line text-gray-400 me-1"></i><a href="services.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out">Feasibility Analysis</a></li>
-									</ul>
-								</div>
-								<div class="lg:col-span-2 md:col-span-3">
-									<h5 class="tracking-[1px] text-gray-100 font-semibold text-lg">Company</h5>
-									<ul class="list-none footer-list mt-6">
-										<li><i class="ri-arrow-right-s-line text-gray-400 me-1"></i><a href="aboutus.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out">About Us</a></li>
-										<li class="mt-[10px]"><i class="ri-arrow-right-s-line text-gray-400 me-1"></i><a href="services.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out">Services</a></li>
-										<li class="mt-[10px]"><i class="ri-arrow-right-s-line text-gray-400 me-1"></i><a href="projects.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out">Projects</a></li>
-										<li class="mt-[10px]"><i class="ri-arrow-right-s-line text-gray-400 me-1"></i><a href="blogs.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out">Blogs</a></li>
-										<li class="mt-[10px]"><i class="ri-arrow-right-s-line text-gray-400 me-1"></i><a href="pricing.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out">Pricing</a></li>
-										<li class="mt-[10px]"><i class="ri-arrow-right-s-line text-gray-400 me-1"></i><a href="team.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out">Team</a></li>
-										<li class="mt-[10px]"><i class="ri-arrow-right-s-line text-gray-400 me-1"></i><a href="faqs.html" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out">FAQs</a></li>
-									</ul>
-								</div>
-								<div class="lg:col-span-3 md:col-span-6">
-									<h5 class="tracking-[1px] text-gray-100 font-semibold text-lg">Get In Touch</h5>
-									<div class="flex mt-6">
-										<i class="ri-map-pin-line text-2xl text-primary me-2"></i>
-										<div class="">
-											<h6 class="text-gray-300">C/54 Northwest Freeway, <br> Houston, USA 485</h6>
-										</div>
-									</div>
-									<div class="flex mt-4">
-										<i class="ri-phone-line text-2xl text-primary me-2"></i>
-										<div class="">
-											<a href="tel:+152534-468-854" class="text-gray-300 hover:text-gray-400 duration-500 ease-in-out">+152 534-468-854</a>
-										</div>
-									</div>
-									<ul class="list-none mt-6">
-										<li class="inline"><a href="https://1.envato.market/ovan" target="_blank" class="size-7 inline-flex justify-center items-center text-gray-400 hover:text-white border border-gray-800 dark:border-gray-700 rounded-md hover:border-primary dark:hover:border-primary hover:bg-primary dark:hover:bg-primary"><i class="ri-shopping-cart-line"></i></a></li>
-										<li class="inline"><a href="https://dribbble.com/shreethemes" target="_blank" class="size-7 inline-flex justify-center items-center text-gray-400 hover:text-white border border-gray-800 dark:border-gray-700 rounded-md hover:border-primary dark:hover:border-primary hover:bg-primary dark:hover:bg-primary"><i class="ri-dribbble-line"></i></a></li>
-										<li class="inline"><a href="https://www.behance.net/shreethemes" target="_blank" class="size-7 inline-flex justify-center items-center text-gray-400 hover:text-white border border-gray-800 dark:border-gray-700 rounded-md hover:border-primary dark:hover:border-primary hover:bg-primary dark:hover:bg-primary"><i class="ri-behance-line"></i></a></li>
-										<li class="inline"><a href="http://linkedin.com/company/shreethemes" target="_blank" class="size-7 inline-flex justify-center items-center text-gray-400 hover:text-white border border-gray-800 dark:border-gray-700 rounded-md hover:border-primary dark:hover:border-primary hover:bg-primary dark:hover:bg-primary"><i class="ri-linkedin-line"></i></a></li>
-										<li class="inline"><a href="https://www.facebook.com/shreethemes" target="_blank" class="size-7 inline-flex justify-center items-center text-gray-400 hover:text-white border border-gray-800 dark:border-gray-700 rounded-md hover:border-primary dark:hover:border-primary hover:bg-primary dark:hover:bg-primary"><i class="ri-facebook-circle-line"></i></a></li>
-										<li class="inline"><a href="https://www.instagram.com/shreethemes/" target="_blank" class="size-7 inline-flex justify-center items-center text-gray-400 hover:text-white border border-gray-800 dark:border-gray-700 rounded-md hover:border-primary dark:hover:border-primary hover:bg-primary dark:hover:bg-primary"><i class="ri-instagram-line"></i></a></li>
-										<li class="inline"><a href="https://twitter.com/shreethemes" target="_blank" class="size-7 inline-flex justify-center items-center text-gray-400 hover:text-white border border-gray-800 dark:border-gray-700 rounded-md hover:border-primary dark:hover:border-primary hover:bg-primary dark:hover:bg-primary"><i class="ri-twitter-x-line"></i></a></li>
-										<li class="inline"><a href="mailto:support@bxcwh25lhfkO.in" class="size-7 inline-flex justify-center items-center text-gray-400 hover:text-white border border-gray-800 dark:border-gray-700 rounded-md hover:border-primary dark:hover:border-primary hover:bg-primary dark:hover:bg-primary"><i class="ri-mail-line"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
+				<div class="py-16 text-center">
+					<div class="flex justify-center mb-6">
+						<a href="index.html" class="text-[22px] focus:outline-none">
+							<img width="125" src="assets/images/logo-light.png" alt="">
+						</a>
 					</div>
+					<ul class="flex justify-center">
+						<li class="mx-3 transition transition-all duration-500 ease-in-out">
+							<a href="index.html" class="text-white hover:text-primary">Home</a>
+						</li>
+						<li class="mx-3 transition transition-all duration-500 ease-in-out">
+							<a href="about.html" class="text-white hover:text-primary">About</a>
+						</li>
+						<li class="mx-3 transition transition-all duration-500 ease-in-out">
+							<a href="services.html" class="text-white hover:text-primary">Services</a>
+						</li>
+						<li class="mx-3 transition transition-all duration-500 ease-in-out">
+							<a href="contact.html" class="text-white hover:text-primary">Contact</a>
+						</li>
+					</ul>
 				</div>
 			</div>
-			<div class="py-[30px] px-0 border-t border-gray-800 dark:border-gray-700">
+			<div class="py-3 px-0 border-t border-gray-800 dark:border-gray-700">
 				<div class="container relative text-center">
-					<div class="grid md:grid-cols-2 items-center gap-6">
-						<div class="md:text-start text-center">
-							<p class="text-gray-300">© <script>document.write(new Date().getFullYear())</script> Ovan. Design with <i class="ri-heart-fill text-red-600"></i> by <a href="https://bxcwh25lhfkO.in/" target="_blank" class="text-reset">Shreethemes</a>.</p>
-						</div>
-						<a href="#" onclick="topFunction()" id="back-to-top" class="back-to-top rounded-md z-10 size-8 bg-primary text-white flex justify-center items-center md:ms-auto md:mx-0 mx-auto"><i class="ri-arrow-up-line align-middle"></i></a>
+					<div class="text-center">
+						<p class="text-gray-300">&copy; <script>document.write(new Date().getFullYear())</script> - Design2Kode</p>
 					</div>
+					<a href="#" onclick="topFunction()" id="back-to-top" class="back-to-top rounded-md z-10 size-8 bg-primary text-white flex justify-center items-center"><i class="ri-arrow-up-line align-middle"></i></a>
 				</div>
 			</div>
 		</footer>
