--- a/aboutus.html
+++ b/aboutus.html
@@ -2,7 +2,7 @@
 <html lang="en" class="light scroll-smooth" dir="ltr">
 	<head>
 		<meta charset="UTF-8">
-		<title>About Us | Web Development & Design Experts | D2k – Design2kode</title>
+		<title>About Us | Web Development & Design Experts | D2K – Design2kode</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta content="Learn about our expert team of designers and developers delivering creative, scalable, and secure web solutions for businesses worldwide." name="description">
 		<meta content="about web development company, professional developers, expert designers, digital solutions team, website agency" name="keywords">
@@ -78,7 +78,7 @@
 			<div class="container relative">
 				<div class="grid grid-cols-1">
 					<ul class="tracking-[0.5px] inline-block">
-						<li class="inline-block font-semibold uppercase duration-500 text-sm ease-in-out text-slate-400 dark:text-white/50 hover:text-primary dark:hover:text-white"><a href="index.html">D2k</a></li>
+						<li class="inline-block font-semibold uppercase duration-500 text-sm ease-in-out text-slate-400 dark:text-white/50 hover:text-primary dark:hover:text-white"><a href="index.html">D2K</a></li>
 						<li class="inline-block text-slate-400 dark:text-white/50 mx-0.5 ltr:rotate-0 rtl:rotate-180"><i class="ri-arrow-right-s-line"></i></li>
 						<li class="inline-block font-semibold uppercase duration-500 text-sm ease-in-out text-primary dark:text-white" aria-current="page">About Us</li>
 					</ul>
@@ -226,7 +226,7 @@
 			<div class="container relative">
 				<div class="grid grid-cols-1 pb-6 text-center">
 					<h4 class="mb-4 md:leading-normal text-[26px] leading-normal font-semibold">core Values</h4>
-					<p class="text-slate-400 max-w-xl mx-auto">At D2k – Design2kode, we value creativity, quality, and integrity. We focus on delivering user-friendly, scalable, and reliable web solutions that help businesses grow and succeed.</p>
+					<p class="text-slate-400 max-w-xl mx-auto">At D2K – Design2kode, we value creativity, quality, and integrity. We focus on delivering user-friendly, scalable, and reliable web solutions that help businesses grow and succeed.</p>
 				</div>
 				<div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 mt-6 gap-6">
 					<div class="vis-mis-block text-center py-12">
@@ -417,8 +417,8 @@
 			</div>
 			<div class="py-3 px-0 border-t border-gray-800 dark:border-gray-700">
 				<div class="container relative text-center">
-					<div class="text-center">
-						<p class="text-gray-300">&copy; <script>document.write(new Date().getFullYear())</script> - Design2Kode</p>
+					<div class="text-center copyright-text">
+						<p class="text-gray-300">&copy; <script>document.write(new Date().getFullYear())</script> - <a href="index.html">Design2Kode</a></p>
 					</div>
 					<a href="#" onclick="topFunction()" id="back-to-top" class="back-to-top rounded-md z-10 size-8 bg-primary text-white flex justify-center items-center"><i class="ri-arrow-up-line align-middle"></i></a>
 				</div>
