--- a/blog-detail.html
+++ b/blog-detail.html
@@ -2,8 +2,8 @@
 <html lang="en" class="light scroll-smooth" dir="ltr">
 	<head>
 		<meta charset="UTF-8">
-		<!-- <title>Web Development Insights | D2k – Design2kode</title> -->
-		<title>Blog | Web Design & Development Insights | D2k – Design2kode</title>
+		<!-- <title>Web Development Insights | D2K – Design2kode</title> -->
+		<title>Blog | Web Design & Development Insights | D2K – Design2kode</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta content="Discover expert insights and detailed guides on web design, development, WordPress, Shopify, PHP, and MERN stack technologies." name="description">
 		<meta content="web development tips, web design trends, coding tutorials, WordPress guide, Shopify how-to, MERN stack solutions" name="keywords">
@@ -84,7 +84,7 @@
 			<div class="container relative">
 				<div class="grid grid-cols-1">
 					<ul class="tracking-[0.5px] inline-block">
-						<li class="inline-block font-semibold uppercase duration-500 text-sm ease-in-out text-slate-400 dark:text-white/50 hover:text-primary dark:hover:text-white"><a href="index.html">Ovan</a></li>
+						<li class="inline-block font-semibold uppercase duration-500 text-sm ease-in-out text-slate-400 dark:text-white/50 hover:text-primary dark:hover:text-white"><a href="index.html">D2K</a></li>
 						<li class="inline-block text-slate-400 dark:text-white/50 mx-0.5 ltr:rotate-0 rtl:rotate-180"><i class="ri-arrow-right-s-line"></i></li>
 						<li class="inline-block font-semibold uppercase duration-500 text-sm ease-in-out text-slate-400 dark:text-white/50 hover:text-primary dark:hover:text-white"><a href="blogs.html">Blogs</a></li>
 						<li class="inline-block text-slate-400 dark:text-white/50 mx-0.5 ltr:rotate-0 rtl:rotate-180"><i class="ri-arrow-right-s-line"></i></li>
@@ -103,7 +103,6 @@
 							<li class="mt-1"><a href="https://www.facebook.com/shreethemes" target="_blank" class="size-8 text-lg inline-flex justify-center items-center text-gray-400 hover:text-white border border-slate-100 dark:border-slate-800 rounded-md hover:border-primary dark:hover:border-primary hover:bg-primary dark:hover:bg-primary"><i class="ri-facebook-circle-line"></i></a></li>
 							<li class="mt-1"><a href="https://www.instagram.com/shreethemes/" target="_blank" class="size-8 text-lg inline-flex justify-center items-center text-gray-400 hover:text-white border border-slate-100 dark:border-slate-800 rounded-md hover:border-primary dark:hover:border-primary hover:bg-primary dark:hover:bg-primary"><i class="ri-instagram-line"></i></a></li>
 							<li class="mt-1"><a href="https://twitter.com/shreethemes" target="_blank" class="size-8 text-lg inline-flex justify-center items-center text-gray-400 hover:text-white border border-slate-100 dark:border-slate-800 rounded-md hover:border-primary dark:hover:border-primary hover:bg-primary dark:hover:bg-primary"><i class="ri-twitter-x-line"></i></a></li>
-							<li class="mt-1"><a href="https://1.envato.market/ovan" target="_blank" class="size-8 text-lg inline-flex justify-center items-center text-gray-400 hover:text-white border border-slate-100 dark:border-slate-800 rounded-md hover:border-primary dark:hover:border-primary hover:bg-primary dark:hover:bg-primary"><i class="ri-links-line"></i></a></li>
 						</ul>
 					</div>
 					<div class="lg:col-span-7 md:col-span-6 col-span-1">
@@ -403,8 +402,8 @@
 			</div>
 			<div class="py-3 px-0 border-t border-gray-800 dark:border-gray-700">
 				<div class="container relative text-center">
-					<div class="text-center">
-						<p class="text-gray-300">&copy; <script>document.write(new Date().getFullYear())</script> - Design2Kode</p>
+					<div class="text-center copyright-text">
+						<p class="text-gray-300">&copy; <script>document.write(new Date().getFullYear())</script> - <a href="index.html">Design2Kode</a></p>
 					</div>
 					<a href="#" onclick="topFunction()" id="back-to-top" class="back-to-top rounded-md z-10 size-8 bg-primary text-white flex justify-center items-center"><i class="ri-arrow-up-line align-middle"></i></a>
 				</div>
