--- a/contactus.html
+++ b/contactus.html
@@ -2,7 +2,7 @@
 <html lang="en" class="light scroll-smooth" dir="ltr">
 	<head>
 		<meta charset="UTF-8">
-		<title>Contact Us | Talk to Our Web Experts | D2k – Design2kode</title>
+		<title>Contact Us | Talk to Our Web Experts | D2K – Design2kode</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta content="Contact our web development team today. Get a free consultation for custom web design, development, and deployment solutions." name="description">
 		<meta content="Ccontact web development company, hire web designer, request quote website, talk to developer, web design agency contact" name="keywords">
@@ -95,21 +95,29 @@
 									<p id="error-msg"></p>
 									<div id="simple-msg"></div>
 									<div class="grid lg:grid-cols-12 gap-4">
-										<div class="lg:col-span-6">
+										<div class="lg:col-span-12">
 											<label for="name" class="font-medium text-sm">Your Name:</label>
-											<input name="name" id="name" type="text" class="form-input py-2 px-3 h-10 text-sm rounded-md w-full bg-transparent border border-slate-100 dark:border-slate-800 focus:shadow-none focus:ring-0 placeholder:text-gray-400 mt-2" placeholder="Name :">
+											<input name="name" id="name" type="text" class="form-input py-2 px-3 h-10 text-sm rounded-md w-full bg-transparent border border-slate-500 dark:border-slate-800 focus:shadow-none focus:ring-0 placeholder:text-gray-400 mt-2" placeholder="Name :">
+										</div>
+										<div class="lg:col-span-12">
+											<label for="email" class="font-medium text-sm">Your Email:</label>
+											<input name="email" id="email" type="email" class="form-input py-2 px-3 h-10 text-sm rounded-md w-full bg-transparent border border-slate-500 dark:border-slate-800 focus:shadow-none focus:ring-0 placeholder:text-gray-400 mt-2" placeholder="Email :">
 										</div>
 										<div class="lg:col-span-6">
-											<label for="email" class="font-medium text-sm">Your Email:</label>
-											<input name="email" id="email" type="email" class="form-input py-2 px-3 h-10 text-sm rounded-md w-full bg-transparent border border-slate-100 dark:border-slate-800 focus:shadow-none focus:ring-0 placeholder:text-gray-400 mt-2" placeholder="Email :">
+											<label for="email" class="font-medium text-sm">Country/Location</label>
+											<input name="email" id="email" type="email" class="form-input py-2 px-3 h-10 text-sm rounded-md w-full bg-transparent border border-slate-500 dark:border-slate-800 focus:shadow-none focus:ring-0 placeholder:text-gray-400 mt-2" placeholder="Email :">
+										</div>
+										<div class="lg:col-span-6">
+											<label for="email" class="font-medium text-sm">Contact Number</label>
+											<input name="email" id="email" type="email" class="form-input py-2 px-3 h-10 text-sm rounded-md w-full bg-transparent border border-slate-500 dark:border-slate-800 focus:shadow-none focus:ring-0 placeholder:text-gray-400 mt-2" placeholder="Email :">
 										</div>
 										<div class="lg:col-span-12">
 											<label for="subject" class="font-medium text-sm">Your Question:</label>
-											<input name="subject" id="subject" class="form-input py-2 px-3 h-10 text-sm rounded-md w-full bg-transparent border border-slate-100 dark:border-slate-800 focus:shadow-none focus:ring-0 placeholder:text-gray-400 mt-2" placeholder="Subject :">
+											<input name="subject" id="subject" class="form-input py-2 px-3 h-10 text-sm rounded-md w-full bg-transparent border border-slate-500 dark:border-slate-800 focus:shadow-none focus:ring-0 placeholder:text-gray-400 mt-2" placeholder="Subject :">
 										</div>
 										<div class="lg:col-span-12">
 											<label for="comments" class="font-medium text-sm">Your Comment:</label>
-											<textarea name="comments" id="comments" class="form-input py-2 px-3 h-28 resize-none text-sm rounded-md w-full bg-transparent border border-slate-100 dark:border-slate-800 focus:shadow-none focus:ring-0 placeholder:text-gray-400 mt-2 textarea" placeholder="Message :"></textarea>
+											<textarea name="comments" id="comments" class="form-input py-2 px-3 h-28 resize-none text-sm rounded-md w-full bg-transparent border border-slate-500 dark:border-slate-800 focus:shadow-none focus:ring-0 placeholder:text-gray-400 mt-2 textarea" placeholder="Message :"></textarea>
 										</div>
 										<div class="lg:col-span-12">
 											<button type="submit" id="submit" name="send" class="h-10 px-4 tracking-wider inline-flex justify-center items-center text-xs uppercase font-bold rounded-md bg-primary text-white">Send Message</button>
@@ -148,8 +156,8 @@
 			</div>
 			<div class="py-3 px-0 border-t border-gray-800 dark:border-gray-700">
 				<div class="container relative text-center">
-					<div class="text-center">
-						<p class="text-gray-300">&copy; <script>document.write(new Date().getFullYear())</script> - Design2Kode</p>
+					<div class="text-center copyright-text">
+						<p class="text-gray-300">&copy; <script>document.write(new Date().getFullYear())</script> - <a href="index.html">Design2Kode</a></p>
 					</div>
 					<a href="#" onclick="topFunction()" id="back-to-top" class="back-to-top rounded-md z-10 size-8 bg-primary text-white flex justify-center items-center"><i class="ri-arrow-up-line align-middle"></i></a>
 				</div>
