--- a/index.html
+++ b/index.html
@@ -336,83 +336,6 @@
 					</div>
 				</div>
 			</div>
-			<!-- <div class="container relative lg:mt-24 mt-16">
-				<div class="grid grid-cols-1 pb-6 text-center">
-					<h4 class="mb-4 md:leading-normal text-[26px] leading-normal font-semibold">Latest Updates on Ovan News</h4>
-					<p class="text-slate-400 max-w-xl mx-auto">Our design projects are fresh and simple and will benefit your business greatly. Learn more about our work!</p>
-				</div>
-				<div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 mt-6 gap-6">
-					<div class="group relative h-fit overflow-hidden bg-white dark:bg-slate-900 rounded-md shadow-sm shadow-slate-100 dark:shadow-slate-800 duration-500">
-						<div class="relative overflow-hidden">
-							<img src="assets/images/blogs/7.jpg" class="group-hover:scale-105 duration-500" alt="">
-							<div class="absolute inset-0 bg-gradient-to-b from-transparent to-slate-900 opacity-0 group-hover:opacity-100 duration-500"></div>
-							<div class="absolute start-6 top-4">
-								<a href="" class="bg-white/70 text-slate-900 hover:bg-primary hover:text-white font-semibold uppercase tracking-wider text-xs px-3 py-1.5 rounded-md">Business</a>
-							</div>
-							<div class="absolute start-6 bottom-4 flex items-center opacity-0 group-hover:opacity-100 duration-500">
-								<img src="assets/images/team/1.jpg" class="size-9 rounded-full" alt="">
-								<a href="" class="text- ms-2 text-white hover:text-primary font-medium">Calvin Carlo</a>
-							</div>
-						</div>
-						<div class="px-6 py-4 flex justify-between bg-slate-50 dark:bg-slate-800">
-							<span class="text-sm flex items-center"><i class="ri-calendar-2-line me-1 text-base"></i> <span class="text-slate-400">1st January 2025</span></span>
-							<span class="text-sm flex items-center"><i class="ri-time-line me-1 text-base"></i> <span class="text-slate-400">5 Min</span></span>
-						</div>
-						<div class="relative px-6 py-4">
-							<a href="blog-detail.html" class="text-lg hover:text-primary font-medium">The Power of Tech in Remote Work Success</a>
-							<div class="mt-3">
-								<a href="blog-detail.html" class="hover:text-primary text-sm font-medium duration-500 ease-in-out">Read More <i class="ri-arrow-right-line"></i></a>
-							</div>
-						</div>
-					</div>					
-					<div class="group relative h-fit overflow-hidden bg-white dark:bg-slate-900 rounded-md shadow-sm shadow-slate-100 dark:shadow-slate-800 duration-500">
-						<div class="relative overflow-hidden">
-							<img src="assets/images/blogs/8.jpg" class="group-hover:scale-105 duration-500" alt="">
-							<div class="absolute inset-0 bg-gradient-to-b from-transparent to-slate-900 opacity-0 group-hover:opacity-100 duration-500"></div>
-							<div class="absolute start-6 top-4">
-								<a href="" class="bg-white/70 text-slate-900 hover:bg-primary hover:text-white font-semibold uppercase tracking-wider text-xs px-3 py-1.5 rounded-md">Business</a>
-							</div>
-							<div class="absolute start-6 bottom-4 flex items-center opacity-0 group-hover:opacity-100 duration-500">
-								<img src="assets/images/team/1.jpg" class="size-9 rounded-full" alt="">
-								<a href="" class="text- ms-2 text-white hover:text-primary font-medium">Calvin Carlo</a>
-							</div>
-						</div>
-						<div class="px-6 py-4 flex justify-between bg-slate-50 dark:bg-slate-800">
-							<span class="text-sm flex items-center"><i class="ri-calendar-2-line me-1 text-base"></i> <span class="text-slate-400">1st January 2025</span></span>
-							<span class="text-sm flex items-center"><i class="ri-time-line me-1 text-base"></i> <span class="text-slate-400">5 Min</span></span>
-						</div>
-						<div class="relative px-6 py-4">
-							<a href="blog-detail.html" class="text-lg hover:text-primary font-medium">How Tech Shapes the Future of Work in 2025</a>
-							<div class="mt-3">
-								<a href="blog-detail.html" class="hover:text-primary text-sm font-medium duration-500 ease-in-out">Read More <i class="ri-arrow-right-line"></i></a>
-							</div>
-						</div>
-					</div>					
-					<div class="group relative h-fit overflow-hidden bg-white dark:bg-slate-900 rounded-md shadow-sm shadow-slate-100 dark:shadow-slate-800 duration-500">
-						<div class="relative overflow-hidden">
-							<img src="assets/images/blogs/9.jpg" class="group-hover:scale-105 duration-500" alt="">
-							<div class="absolute inset-0 bg-gradient-to-b from-transparent to-slate-900 opacity-0 group-hover:opacity-100 duration-500"></div>
-							<div class="absolute start-6 top-4">
-								<a href="" class="bg-white/70 text-slate-900 hover:bg-primary hover:text-white font-semibold uppercase tracking-wider text-xs px-3 py-1.5 rounded-md">Business</a>
-							</div>
-							<div class="absolute start-6 bottom-4 flex items-center opacity-0 group-hover:opacity-100 duration-500">
-								<img src="assets/images/team/1.jpg" class="size-9 rounded-full" alt="">
-								<a href="" class="text- ms-2 text-white hover:text-primary font-medium">Calvin Carlo</a>
-							</div>
-						</div>
-						<div class="px-6 py-4 flex justify-between bg-slate-50 dark:bg-slate-800">
-							<span class="text-sm flex items-center"><i class="ri-calendar-2-line me-1 text-base"></i> <span class="text-slate-400">1st January 2025</span></span>
-							<span class="text-sm flex items-center"><i class="ri-time-line me-1 text-base"></i> <span class="text-slate-400">5 Min</span></span>
-						</div>
-						<div class="relative px-6 py-4">
-							<a href="blog-detail.html" class="text-lg hover:text-primary font-medium">How AI is Revolutionizing Business Management in 2025</a>
-							<div class="mt-3">
-								<a href="blog-detail.html" class="hover:text-primary text-sm font-medium duration-500 ease-in-out">Read More <i class="ri-arrow-right-line"></i></a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div> -->
 			<div class="container relative md:mt-24 mt-16">
 				<div class="grid relative">
 					<div class="absolute inset-0 bg-[url('../../assets/images/box-lines.png')] bg-center bg-repeat bg-cover"></div>
@@ -466,8 +389,8 @@
 			</div>
 			<div class="py-3 px-0 border-t border-gray-800 dark:border-gray-700">
 				<div class="container relative text-center">
-					<div class="text-center">
-						<p class="text-gray-300">&copy; <script>document.write(new Date().getFullYear())</script> - Design2Kode</p>
+					<div class="text-center copyright-text">
+						<p class="text-gray-300">&copy; <script>document.write(new Date().getFullYear())</script> - <a href="index.html">Design2Kode</a></p>
 					</div>
 					<a href="#" onclick="topFunction()" id="back-to-top" class="back-to-top rounded-md z-10 size-8 bg-primary text-white flex justify-center items-center"><i class="ri-arrow-up-line align-middle"></i></a>
 				</div>
