--- a/faqs.html
+++ b/faqs.html
@@ -2,7 +2,7 @@
 <html lang="en" class="light scroll-smooth" dir="ltr">
 	<head>
 		<meta charset="UTF-8">
-		<title>FAQs | Web Design & Development Questions | D2k – Design2kode</title>
+		<title>FAQs | Web Design & Development Questions | D2K – Design2kode</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta content="web development FAQs, website design questions, web deployment help, WordPress FAQs, Shopify support, MERN stack queries." name="description">
 		<meta content="web development FAQs, website design questions, web deployment help, WordPress FAQs, Shopify support, MERN stack queries" name="keywords">
@@ -78,7 +78,7 @@
 			<div class="container relative">
 				<div class="grid grid-cols-1">
 					<ul class="tracking-[0.5px] inline-block">
-						<li class="inline-block font-semibold uppercase duration-500 text-sm ease-in-out text-slate-400 dark:text-white/50 hover:text-primary dark:hover:text-white"><a href="index.html">D2k</a></li>
+						<li class="inline-block font-semibold uppercase duration-500 text-sm ease-in-out text-slate-400 dark:text-white/50 hover:text-primary dark:hover:text-white"><a href="index.html">D2K</a></li>
 						<li class="inline-block text-slate-400 dark:text-white/50 text-sm mx-0.5 ltr:rotate-0 rtl:rotate-180"><i class="ri-arrow-right-s-line"></i></li>
 						<li class="inline-block font-semibold uppercase duration-500 text-xs ease-in-out text-primary dark:text-white" aria-current="page">FAQs</li>
 					</ul>
@@ -286,8 +286,8 @@
 			</div>
 			<div class="py-3 px-0 border-t border-gray-800 dark:border-gray-700">
 				<div class="container relative text-center">
-					<div class="text-center">
-						<p class="text-gray-300">&copy; <script>document.write(new Date().getFullYear())</script> - Design2Kode</p>
+					<div class="text-center copyright-text">
+						<p class="text-gray-300">&copy; <script>document.write(new Date().getFullYear())</script> - <a href="index.html">Design2Kode</a></p>
 					</div>
 					<a href="#" onclick="topFunction()" id="back-to-top" class="back-to-top rounded-md z-10 size-8 bg-primary text-white flex justify-center items-center"><i class="ri-arrow-up-line align-middle"></i></a>
 				</div>
